--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>JS</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <h1 id="prova"></h1>
         <script src="js/script.js" charset="utf-8"></script>
     </body>
 </html>
